# learning-based-cooperative-control

./: CMakeLists.txt  package.xml  readme.md
config/: swarm_control.yaml
include/: rbf_cuda.hpp
launch/: swarm_control.launch.py  swarm_control.launch_twoauvs.py
src/: rbf_cuda.cu  simple_controller.cpp  simple_controller_V1.cpp  simple_controller_V2.cpp  simple_controller_V3.cpp  simple_controller_V4.cpp  simple_controller_firstv.cpp  simple_controller_org.cpp  simple_controller_twoauvs.cpp  swarm_weight_manager_node.cpp  yaw_extractor_node.cpp
test/: sendwaypoints_srv_call.txt
